# FindingGenerators

./: CMakeLists.txt  LICENCE.txt  README.md  full_run.py  gen_test.py  main.cpp  main.py  pyproject.toml  red_test.py
FindingGenerators/: CMakeLists.txt  __init__.py
FindingGenerators/cpp_src/: bindings.cpp
finding_generators/: CMakeLists.txt  __init__.py  main.py
finding_generators/cpp_src/: bindings.cpp  main.cpp  thread_pool.hpp
src/cpp/: CMakeLists.txt
testing/: all_111.py  full_run.py  rocksalt_alnit.cif
