[build-system]
requires = [
    "scikit-build-core>=0.5.0",
    "pybind11 (>=3.0.1,<4.0.0)",
]
build-backend = "scikit_build_core.build"

[project]
name = "finding_generators"
version = "1.0.0"
description = ""
authors = [
    {name = "Oliver Heymer",email = "ollyeh01@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pymatgen (>=2025.10.7,<2026.0.0)",
    "ase (>=3.26.0,<4.0.0)",
    "numpy (>=2.3.5,<3.0.0)"
]

[tool.scikit-build]
cmake.source-dir = "finding_generators"
wheel.packages = ["finding_generators"]
cmake.verbose = true
